# symex

./: .gitignore  .gitmodules  Cargo.toml  README.md
armv6-m-examples/: Cargo.toml  Embed.toml  build.out  build.rs  enum_u16.s  expanded_derive.rs  expanded_impl.rs  mem_link.x  memory.x  pico_cargo.toml  template_cargo.toml
armv6-m-examples/.cargo/: config.toml
armv6-m-examples/dut/: Cargo.toml
armv6-m-examples/dut/src/: lib.rs
armv6-m-examples/examples/: bubble_sort.rs  enum.rs  enum_any.rs  enum_match.rs  enum_match_derive.rs  enum_match_impl.rs  enum_u16.rs  generics.rs  get_sign.rs  initial.rs  rtic_blink.rs  rtic_button_led.rs  rtic_dfmt.rs  rtic_full_example.rs  rtic_simple.rs  rtic_simple_resourse.rs  rtic_test.rs  test_functions.rs  test_timing.rs
cargo-symex/: Cargo.toml
cargo-symex/src/: args.rs  build.rs  build_c.rs  main.rs
crates/any_derive/: Cargo.toml
crates/any_derive/src/: lib.rs
crates/llvm-ir/src/: constant.rs  instruction.rs  module.rs
crates/symex_lib/: Cargo.toml
crates/symex_lib/examples/: valid.rs
crates/symex_lib/src/: lib.rs
crates/valid_derive/src/: lib.rs
examples/: Cargo.toml
src/general_assembly/: mod.rs  project.rs
symex/: Cargo.toml
symex-llvm-14-legacy/src/: lib.rs  run.rs
symex-llvm-14-legacy/src/llvm/common/: size.rs
symex/general_assembly/: Cargo.toml  rustfmt.toml
symex/general_assembly/src/: condition.rs  lib.rs  operand.rs  operation.rs  shift.rs
symex/src/: elf_util.rs  lib.rs  run.rs  run_elf.rs  run_llvm.rs  util.rs
symex/src/general_assembly/: arch.rs  executor.rs  instruction.rs  mod.rs  path_selection.rs  project.rs  run_config.rs  state.rs  translator.rs  vm.rs
symex/src/general_assembly/arch/: arm.rs
symex/src/general_assembly/arch/arm/: v6.rs  v7.rs
symex/src/general_assembly/arch/arm/v6/: decoder.rs  timing.rs
symex/src/general_assembly/arch/arm/v7/: compare.rs  decoder.rs  test.rs  timing.rs
symex/src/general_assembly/project/: dwarf_helper.rs  segments.rs  target_config.rs
symex/src/general_assembly/translators/: armv6_m.rs  mod.rs
symex/src/memory/: array_memory.rs  byte_addressable_object_memmory.rs  linear_allocator.rs  mod.rs  object_memory.rs
symex/src/smt/smt_boolector/: expr.rs  mod.rs  solver.rs
symex/src/vm/: executor.rs  hooks.rs  intrinsic.rs  mod.rs  path_selection.rs  project.rs  state.rs  vm.rs
symex/tests/: main.rs  test_runner.rs
symex/tests/unit_tests/: instructions.ll
symex/transpiler/: .gitignore  Cargo.toml  LICENSE  README.md
symex/transpiler/language/: Cargo.toml  README.md
symex/transpiler/language/src/: ast.rs  ga_backend.rs  lib.rs  parser.rs
symex/transpiler/language/src/ast/: function.rs  operand.rs  operations.rs
symex/transpiler/language/src/ga_backend/: function.rs  operand.rs  operations.rs
symex/transpiler/language/src/parser/: function.rs  operand.rs  operation.rs
symex/transpiler/src/: lib.rs
symex/transpiler/tests/: Cargo.toml
symex/transpiler/tests/examples/: field_extract.rs  forloop.rs  simple_if.rs
tests/samples/: blink  blink2  blink3  blink4
wcet-analasis-example/: Cargo.toml
wcet-analasis-example/examples/: simple_wcet.rs  wcet_resource_times.rs
