[package]
name = "armv6-m-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2.0" 

rtic = {version = "2.0", features = ["thumbv6-backend"] }
rtic-monotonics = {version = "1.0.0", features = ["rp2040"]}
rtic-monotonic = "1.0.0"

# We're using a Pico by default on this template
rp-pico = "0.7"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.6"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
symex_lib = { path = "../crates/symex_lib", version = "1.0" }
valid_derive = {path = "../crates/valid_derive", version = "1.0"}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false


# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
