[workspace]
members = ["general_assembly"]
[package]
name = "symex"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-ir = { path = "../crates/llvm-ir", version = "*", optional = true }
anyhow = "1.0"
thiserror = "1.0"
rustc-demangle = "0.1.21"
boolector = { version = "0.4.3", features = ["vendor-lgl"] }
radix_trie = "0.2.1"
tracing = "0.1"
tracing-subscriber = "0.3"

indenter = "0.3"
colored = "2.0"
rand = "0.8.5"
object = "0.32.1"

armv6-m-instruction-parser = "0.3.0-rc1"
gimli = "0.28.0"
regex = "1.10.2"

general_assembly = { path = "./general_assembly" }

[features]
# Defines a feature named `llvm` that enables symbolic execution at LLVM-IR level
llvm = ["llvm-ir"]
